# call_me_maby

./: Makefile  pyproject.toml
data/input/: function_calling_tests.json  functions_definition.json
src/: __init__.py  __main__.py  constrained_decoder.py  file_io.py  function_selector.py  models.py
tests/: test_constrained_decoder.py  test_integration.py
