[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling tool using constrained decoding"
requires-python = ">=3.10"
dependencies = [
    "flake8>=7.3.0",
    "huggingface-hub>=1.9.0",
    "mypy>=1.19.1",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "torch>=2.11.0",
    "transformers>=5.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
